objects/ASI_CRM_CN_Channel__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Allow_Pouring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Pouring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_BC_Rate__c</fullName>
        <label>BC Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Channel_Chi_Name__c</fullName>
        <label>Channel Chi Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Channel_Code__c</fullName>
        <label>Channel Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Channel_Eng_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Channel_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Group</label>
        <referenceTo>ASI_CRM_CN_Channel_Group__c</referenceTo>
        <relationshipLabel>Channel</relationshipLabel>
        <relationshipName>ASI_CRM_CN_ChannelToCG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_For_Lecode_Channel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Digital Platform Lecode Channel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_On_Off__c</fullName>
        <label>On/Off</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Off</fullName>
                </value>
                <value>
                    <fullName>On</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Outlet_Class__c</fullName>
        <label>Outlet Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Code_for_PAF__c</fullName>
        <label>Code for PAF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_For_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_For_Outlet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Outlet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Group_Customers__c</fullName>
        <label>Group Customers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DP Wholesalers</fullName>
                </value>
                <value>
                    <fullName>Corporate Accounts</fullName>
                </value>
                <value>
                    <fullName>Employee&apos;s Accounts</fullName>
                </value>
                <value>
                    <fullName>Inter-company</fullName>
                </value>
                <value>
                    <fullName>Wholesalers</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>DF Island</fullName>
                </value>
                <value>
                    <fullName>Direct Shipments</fullName>
                </value>
                <value>
                    <fullName>Bond to Bond Sales</fullName>
                </value>
                <value>
                    <fullName>Concessionaires</fullName>
                </value>
                <value>
                    <fullName>Downtown / Shipchandlers</fullName>
                </value>
                <value>
                    <fullName>Domestic Airports</fullName>
                </value>
                <value>
                    <fullName>Embassy</fullName>
                </value>
                <value>
                    <fullName>Inter Company</fullName>
                </value>
                <value>
                    <fullName>Border Shops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_ID__c</fullName>
        <externalId>true</externalId>
        <label>ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Market_Responsibility__c</fullName>
        <label>Market Responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duty Paid</fullName>
                </value>
                <value>
                    <fullName>Duty Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Channel_Code__c</fullName>
        <label>New Channel Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PDF_Type__c</fullName>
        <label>PDF Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ON Trade</fullName>
                </value>
                <value>
                    <fullName>ON Trade 2</fullName>
                </value>
                <value>
                    <fullName>LS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Achievement_for_Conditional__c</fullName>
        <label>Achievement % for Conditional Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Achievement_for_Variable__c</fullName>
        <label>Achievement % for Variable Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Channel_Av_CATAP_NS__c</fullName>
        <label>Channel Av. CATAP/NS%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Channel_Av_Investment_Ratio__c</fullName>
        <label>Channel Av Investment Ratio%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Channel_Av__c</fullName>
        <label>Channel Av. ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Default_Cash_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Cash A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Channel (Default Cash A/C Code)</relationshipLabel>
        <relationshipName>Channel1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Default_FOC_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default FOC A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Channel</relationshipLabel>
        <relationshipName>Channel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Incentives_for_Conditional__c</fullName>
        <label>Incentives % for Conditional Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Incentives_for_Variable__c</fullName>
        <label>Incentives % for Variable Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Outlet_Contract_Rebate__c</fullName>
        <label>Outlet Contract Rebate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_T1_Contract_Rebate__c</fullName>
        <label>T1 Contract Rebate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_T2_Contract_Rebate__c</fullName>
        <label>T2 Contract Rebate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Require_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_NPL_Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>South West</fullName>
                </value>
                <value>
                    <fullName>HQ</fullName>
                </value>
                <value>
                    <fullName>Macau</fullName>
                </value>
                <value>
                    <fullName>Mongolia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Channel</label>
    <listViews>
        <fullName>ALL_CN_NPL_Channel</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Channel_Group__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel__c.ASI_CRM_CN_Channel</value>
        </filters>
        <label>ALL CN NPL Channel</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_CN_NPL_Channel_henry</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Channel_Group__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel__c.ASI_NPL_CN_Channel</value>
        </filters>
        <label>ALL CN NPL Channel-henry</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Channel</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Channel_Chi_Name__c</columns>
        <columns>ASI_CRM_CN_Channel_Eng_Name__c</columns>
        <columns>ASI_CRM_CN_On_Off__c</columns>
        <columns>ASI_CRM_CN_Channel_Group__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>ASI_CRM_For_Contract__c</columns>
        <columns>ASI_CRM_For_Outlet__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_CRM_CN_For_Lecode_Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel__c.ASI_CRM_CN_New_Channel</value>
        </filters>
        <label>CN New Channel</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_Channel</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_CN_Channel_Code__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel__c.ASI_CRM_MY_Channel</value>
        </filters>
        <label>MY Channels</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MY_Segmentation_Channel</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_CN_Channel_Code__c</columns>
        <columns>ASI_CRM_CN_On_Off__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel__c.ASI_CRM_MY_Segmentation_Channel</value>
        </filters>
        <label>MY Segmentation Channel</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_MY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Channel</fullName>
        <columns>ASI_CRM_CN_Channel_Code__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_PDF_Type__c</columns>
        <columns>ASI_CRM_CN_Channel_Chi_Name__c</columns>
        <columns>ASI_CRM_TW_Default_Cash_A_C_Code__c</columns>
        <columns>ASI_CRM_TW_Default_FOC_A_C_Code__c</columns>
        <columns>ASI_CRM_Code_for_PAF__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_TW_Achievement_for_Conditional__c</columns>
        <columns>ASI_CRM_TW_Incentives_for_Conditional__c</columns>
        <columns>ASI_CRM_TW_Achievement_for_Variable__c</columns>
        <columns>ASI_CRM_TW_Incentives_for_Variable__c</columns>
        <columns>ASI_CRM_TW_T1_Contract_Rebate__c</columns>
        <columns>ASI_CRM_TW_T2_Contract_Rebate__c</columns>
        <columns>ASI_CRM_TW_Outlet_Contract_Rebate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel__c.ASI_CRM_TW_Channel</value>
        </filters>
        <label>TW Channels</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_NPL_CN_Channel</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Channel_Group__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel__c.ASI_NPL_CN_Channel</value>
        </filters>
        <label>ALL CN NPL Channel</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_NPL_CN_Channel_Vol_Forecast</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_NPL_Region__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel__c.ASI_NPL_CN_Request_Forecast_Channel</value>
        </filters>
        <label>ALL CN NPL Channel (Vol Forecast)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_POSM_Channel</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Channel_Chi_Name__c</columns>
        <columns>ASI_CRM_CN_Channel_Eng_Name__c</columns>
        <columns>ASI_CRM_CN_Channel_Code__c</columns>
        <columns>ASI_CRM_CN_On_Off__c</columns>
        <columns>ASI_CRM_CN_Outlet_Class__c</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CN_Channel__c.ASI_MFM_CN_POSM_Channel</value>
        </filters>
        <label>CN POSM Channel</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Channel</fullName>
        <active>true</active>
        <label>CN Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_New_Channel</fullName>
        <active>true</active>
        <label>CN New Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_HK_Channel</fullName>
        <active>true</active>
        <label>HK Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Channel</fullName>
        <active>true</active>
        <label>MY Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Segmentation_Channel</fullName>
        <active>true</active>
        <label>MY Segmentation Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Channel</fullName>
        <active>true</active>
        <label>TW Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_POSM_Channel</fullName>
        <active>true</active>
        <description>ASI_MFM_CN_Channel</description>
        <label>CN POSM Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_NPL_CN_Channel</fullName>
        <active>true</active>
        <description>ASI_NPL_CN_Channel</description>
        <label>CN NPL Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_NPL_CN_Request_Forecast_Channel</fullName>
        <active>true</active>
        <description>ASI_NPL_CN_Request_Forecast_Channel</description>
        <label>CN NPL Request Forecast Channel</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>